--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 {% for stages in ob %}
-	Source - 
+	{{source}} - 
 
 
 	{% for route in ob2 %}
@@ -16,7 +16,7 @@
 {% endfor %}
 <br>
 <br><br><br>
-Destination - 
+{{dest}} - 
 {% for route in ob3 %}
 		{{route}}
 	{% endfor %}
