--- a/FleetManager/Buses/templates/choice.html
+++ b/FleetManager/Buses/templates/choice.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
+{% load staticfiles %}
 	<title>Choice</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
+<div class="row">
+	<div class="row">
+	</div>
+</div>
+<center>
 <form action="routes/" method="POST">
 	{% csrf_token %}
+	<div class="form">
+	<div class="row">
 Source :
-<select name="from">
-	{% for routes in ob %}
+    <select>
+<option value="" disabled selected>Choose your location</option>
+      {% for routes in ob %}
 
 	<option value="{{routes}}" >{{routes}}</option>
 	{% endfor %}
-</select>
+    </select>
+ 
+	</div>
+
+	<br>
+	<div class="row">
 Destination:
-<select name="to">
-	{% for routes in ob %}
+    <select>
+<option value="" disabled selected>Choose your location</option>
 
+      {% for routes in ob %}
 	<option value="{{routes}}" >{{routes}}</option>
 	{% endfor %}
-</select>
-<input type="submit" value="GO">
+    </select>
+	</div>
+	<br>
+
+<input type="submit" class="waves-effect waves-light btn" value="GO">
+</div>
 </form>
+</center>
 </body>
 </html>
