Fixed Dict Error

--- a/FleetManager/Buses/templates/choice.html
+++ b/FleetManager/Buses/templates/choice.html
@@ -25,7 +25,7 @@
 	<div class="form">
 	<div class="row">
 Source :
-    <select class="from">
+    <select name="from">
 <option value="" disabled selected>Choose your location</option>
       {% for routes in ob %}
 
@@ -38,7 +38,7 @@ Source :
 	<br>
 	<div class="row">
 Destination:
-    <select class="to">
+    <select name="to">
 <option value="" disabled selected>Choose your location</option>
 
       {% for routes in ob %}
