--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -27,8 +27,8 @@
 	{% endfor %}
 
 <br><br><br>
-
-Busses from source to destination-
+<hr>
+<center>Busses from {{source}} to {{dest}}:</center>
 <br>
 <table border="1px">
 <tr>
