--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -9,7 +9,7 @@
 <script src="{% static 'js/jquery-2.1.3.min.js' %}"></script> 
 </head>
 <body>
-{% for stages in ob %}
+<!-- {% for stages in ob %}
 	{{source}} - 
 
 
@@ -26,9 +26,9 @@
 		{{route}}
 	{% endfor %}
 
-<br><br><br>
+<br><br><br> -->
 <hr>
-<center>Busses from {{source}} to {{dest}}:</center>
+<center>Buses from {{source}} to {{dest}}:</center>
 <br>
 <table border="1px">
 <tr>
