--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -3,10 +3,16 @@
 <head>
 {% load staticfiles %}
 	<title>Routes</title>
-<link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
+<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
 <script src="{% static 'js/materialize.min.js' %}"></script>
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script> 
+<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>  -->
+<center><div>
+	<img src="{% static "img/thumb.jpg" %}" alt="MTC Logo" style="height: 148px"/>
+	<img src="{% static "img/bannerMTC.jpg" %}" alt="MTC Banner"/>
+	<img src="{% static "img/2000px-TamilNadu_Logo.jpg" %}" alt="TN Gov Logo" style="height: 148px"/>
+</div></center>
+<a href="/"><button>Back</button></a>
 </head>
 <body>
 <!-- {% for stages in ob %}
@@ -27,9 +33,22 @@
 	{% endfor %}
 
 <br><br><br> -->
+
+<center>
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/directions?key=AIzaSyCmpS9RwVmQLBCxTOZ9u5hrQtPw3yESprA
+    &origin={{source}}
+  &destination={{dest}}
+  &mode=transit" allowfullscreen>
+</iframe>
+</center>
 <hr>
 <center>Buses from {{source}} to {{dest}}:</center>
 <br>
+<CENTER>
 <table border="1px">
 <tr>
 	<th>Bus Route</th>
@@ -50,5 +69,6 @@
 
 	{% endfor %}
 </table>
+</CENTER>
 </body>
 </html>
