--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -3,16 +3,27 @@
 <head>
 {% load staticfiles %}
 	<title>Routes</title>
-<!-- <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
 <script src="{% static 'js/materialize.min.js' %}"></script>
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>  -->
+<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script> 
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> -->
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.11&sensor=false" type="text/javascript"></script>
 <center><div>
 	<img src="{% static "img/thumb.jpg" %}" alt="MTC Logo" style="height: 148px"/>
 	<img src="{% static "img/bannerMTC.jpg" %}" alt="MTC Banner"/>
 	<img src="{% static "img/2000px-TamilNadu_Logo.jpg" %}" alt="TN Gov Logo" style="height: 148px"/>
 </div></center>
-<a href="/"><button>Back</button></a>
+
+<style>
+      #map {
+        width: 50%;
+        height: 400px;
+        background-color: grey;
+      }
+
+    </style>
+
 </head>
 <body>
 <!-- {% for stages in ob %}
@@ -35,6 +46,7 @@
 <br><br><br> -->
 
 <center>
+<center><h5>Route</h5></center>
 <iframe
   width="600"
   height="450"
@@ -45,11 +57,118 @@
   &mode=transit" allowfullscreen>
 </iframe>
 </center>
+
+<!-- <CENTER><div id="map">asd</div></CENTER>
+<script>
+      // function initMap() {
+      //   var uluru = {lat: -25.363, lng: 131.044};
+      //   var map = new google.maps.Map(document.getElementById('map'), {
+      //     zoom: 4,
+      //     center: uluru
+      //   });
+      //   var marker = new google.maps.Marker({
+      //     position: uluru,
+      //     map: map
+      //   });
+      // }
+      var locations = [
+      ['Bondi Beach', -33.890542, 151.274856, 4],
+      ['Coogee Beach', -33.923036, 151.259052, 5],
+      ['Cronulla Beach', -34.028249, 151.157507, 3],
+      ['Manly Beach', -33.80010128657071, 151.28747820854187, 2],
+      ['Maroubra Beach', -33.950198, 151.259302, 1]
+    ];
+
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 10,
+      center: new google.maps.LatLng(-33.92, 151.25),
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        map: map
+      });
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent(locations[i][0]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+    }
+    </script> -->
+    <!-- <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCmpS9RwVmQLBCxTOZ9u5hrQtPw3yESprA&callback=initMap">
+    </script> -->
+    <center><h5>Current Location</h5></center>
+    <Center><div id="map" style="width: 50%; height: 400px;"></div></Center>
+<!-- {{ob5|safe}} -->
+  <script type="text/javascript">
+    // var locations = [
+    //   ['Bondi Beach', -33.890542, 151.274856, 4],
+    //   ['Coogee Beach', -33.923036, 151.259052, 5],
+    //   ['Cronulla Beach', -34.028249, 151.157507, 3],
+    //   ['Manly Beach', -33.80010128657071, 151.28747820854187, 2],
+    //   ['Maroubra Beach', -33.950198, 151.259302, 1]
+    // ];
+    var locations = {{ob5|safe}};
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 11,
+      center: new google.maps.LatLng(13.0478573, 80.0689238),
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    });
+
+    var features = [
+
+    ]
+    var infowindow = new google.maps.InfoWindow();
+
+    var marker, i;
+
+    for (i = 0; i < locations.length; i++) {  
+      marker = new google.maps.Marker({
+        position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+        // icon : "http://www.iconsdb.com/icons/preview/green/bus-2-xxl.png"
+        // animation: google.maps.Animation.DROP,
+
+        map: map,
+        title :'Bus',
+        // marker.addListener('click', toggleBounce);
+
+      });
+
+
+
+      google.maps.event.addListener(marker, 'click', (function(marker, i) {
+        return function() {
+          infowindow.setContent("Bus Route: "+locations[i][0]+" |ETA: "+locations[i][3]+" |Occupancy: "+locations[i][4]);
+          infowindow.open(map, marker);
+        }
+      })(marker, i));
+
+  //     function toggleBounce() {
+  // if (marker.getAnimation() !== null) {
+  //   marker.setAnimation(null);
+  // } else {
+  //   marker.setAnimation(google.maps.Animation.BOUNCE);
+  // }
+
+    }
+
+  </script>
+
 <hr>
-<center>Buses from {{source}} to {{dest}}:</center>
+<center><h5>Buses from {{source}} to {{dest}}:</h5></center>
 <br>
 <CENTER>
-<table border="1px">
+<table class="striped centered">
+<thead>
 <tr>
 	<th>Bus Route</th>
 	<th>Occupancy</th>
@@ -57,6 +176,8 @@
 	<th>Latitude</th>
 	<th>Longitude</th>
 </tr>
+</thead>
+<tbody>
 {% for route,crowd,eta,lat,lon in ob4 %}
 <tr>
 
@@ -68,7 +189,10 @@
 </tr>
 
 	{% endfor %}
+	</tbody>
 </table>
 </CENTER>
+<center><a href="/"><button class="btn green">Back</button></a></center>
+<footer>&nbsp;</footer>
 </body>
 </html>
