--- a/FleetManager/Buses/templates/routes.html
+++ b/FleetManager/Buses/templates/routes.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/materialize.min.css' %}">
 <script src="{% static 'js/materialize.min.js' %}"></script>
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script> 
+<script src="{% static 'js/jquery-2.1.3.min.js' %}"></script>
 <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> -->
         <script src="https://maps.googleapis.com/maps/api/js?v=3.11&sensor=false" type="text/javascript"></script>
 <center><div>
@@ -27,7 +27,7 @@
 </head>
 <body>
 <!-- {% for stages in ob %}
-	{{source}} - 
+	{{source}} -
 
 
 	{% for route in ob2 %}
@@ -38,7 +38,7 @@
 {% endfor %}
 <br>
 <br><br><br>
-{{dest}} - 
+{{dest}} -
 {% for route in ob3 %}
 		{{route}}
 	{% endfor %}
@@ -89,7 +89,7 @@
 
     var marker, i;
 
-    for (i = 0; i < locations.length; i++) {  
+    for (i = 0; i < locations.length; i++) {
       marker = new google.maps.Marker({
         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
         map: map
@@ -131,10 +131,10 @@
 
     var marker, i;
 
-    for (i = 0; i < locations.length; i++) {  
+    for (i = 0; i < locations.length; i++) {
       marker = new google.maps.Marker({
         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-        // icon : "http://www.iconsdb.com/icons/preview/green/bus-2-xxl.png"
+        icon : "{% static "img/bus.png" %}",
         // animation: google.maps.Animation.DROP,
 
         map: map,
